# aoc2022

./: .gitignore  aoc.ml  day1.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune  mk_solution.sh  prompt9.txt
