(executables
 (names
  day1
  day2
  day3
  day4
  day5
  day6
  day7
  day8
  day9
  day10
  day11
  day12
  day13
  day14
  day15
  day16)
 (flags
  (:standard
   -warn-error
   "-unused-constructor"
   -warn-error
   "-unused-var"
   -warn-error
   "-unused-value-declaration"
   -warn-error
   "-unused-var-strict"
   -warn-error
   "-unused-type-declaration"))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_jane))
 (libraries stdio base re core angstrom num))
